ucs-test (10.0.1-33) unstable; urgency=low

  * Bug #45205: readd tests for mail forwarding settings

 -- Daniel Troeder <troeder@univention.de>  Thu, 26 Nov 2020 11:30:04 +0100

ucs-test (10.0.1-32) unstable; urgency=medium

  * Bug #52005: Reactivate 96rename* and work around Bug#51804

 -- Felix Botner <botner@univention.de>  Wed, 25 Nov 2020 12:57:50 +0100

ucs-test (10.0.1-31) unstable; urgency=medium

  * Bug #51929: added 55_adconnector/504_test_group_cache_after_move

 -- Felix Botner <botner@univention.de>  Thu, 19 Nov 2020 13:08:11 +0100

ucs-test (10.0.1-30) unstable; urgency=medium

  * Bug #52364: added 52_s4connector/515test_group_cache_after_move

 -- Felix Botner <botner@univention.de>  Tue, 17 Nov 2020 14:13:36 +0100

ucs-test (10.0.1-29) unstable; urgency=medium

  * Another workaround for Bug #52358:
    66_udm-computers/56_all_roles_univentionLastUsedValue

 -- Arvid <requate@univention.de>  Mon, 16 Nov 2020 20:07:24 +0100

ucs-test (10.0.1-28) unstable; urgency=medium

  * Bug #52358: The 01_base/47faillog* tests should wait for
    ldap-group-to-file.py to succeed to get deterministic results.

 -- Arvid <requate@univention.de>  Mon, 16 Nov 2020 17:26:17 +0100

ucs-test (10.0.1-27) unstable; urgency=medium

  * Bug #43686: replace init.d with systemctl calls for UDL

 -- Jürn Brodersen <brodersen@univention.de>  Fri, 13 Nov 2020 14:11:36 +0100

ucs-test (10.0.1-26) unstable; urgency=medium

  * Workaround for Bug #52358

 -- Arvid <requate@univention.de>  Thu, 12 Nov 2020 19:32:34 +0100

ucs-test (10.0.1-25) unstable; urgency=low

  * Bug #51588: Fix 09_updater/ tests
  * Bug #52210: Add `Raw` output format

 -- Philipp Hahn <hahn@univention.de>  Mon, 09 Nov 2020 18:43:55 +0100

ucs-test (10.0.1-24) unstable; urgency=medium

  * Bug #52310: Improve test output of 50quota
  * Bug #51332: Migrate diagnostic UMC module to Python3
  * Bug #49898: Adjust tests to Python3 Samba

 -- Arvid <requate@univention.de>  Wed, 04 Nov 2020 13:23:17 +0100
